--- a/index.html
+++ b/index.html
@@ -12,42 +12,47 @@
 </head>
 <body>
     <header>
-    <nav class="navbar navbar-light bg-light fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="image/logo.PNG" alt="image/logo.PNG" width="30" height="30" class="d-inline-block align-text-top">
-                MaxFromSpace
-            </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Чаты</h5>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="image/logo.PNG" alt="image/logo.PNG" width="30" height="30" class="d-inline-block align-text-top">
+                    MaxFromSpace
+                </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Андрей Павлов</a>
+                  </li>
+                  <!-- телефон -->
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Андрей Ксюшкин</a>
+                  </li>
+                  <!-- пк -->
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Чаты
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Саша Иванов</a></li>
+                      <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
+                      <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
+                    </ul>
+                  </li>
+                  <!-- на потом -->
+                  <li class="nav-item">
+                    <a class="nav-link disabled"></a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="ID пользователя" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Добавить</button>
+                </form>
+              </div>
             </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Андрей Павлов</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Саша Иванов</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Петя Гичкин</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Костя Никитин</a>
-                </li>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="ID пользователя" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Добавить</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </nav>
+          </nav>
     </header>
 
     <main>
