--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="image/logo.PNG" alt="image/logo.PNG" width="30" height="30" class="d-inline-block align-text-top">
@@ -27,20 +27,34 @@
                     <a class="nav-link active" aria-current="page" href="#">Андрей Павлов</a>
                   </li>
                   <!-- телефон -->
+                  <div class="d-sm-none">
                   <li class="nav-item">
                     <a class="nav-link" href="#">Андрей Ксюшкин</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Саша Иванов</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Петя Гичкин</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Костя Никитин</a>
+                  </li>
+                </div>
                   <!-- пк -->
+                  <div class="d-none d-md-block">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Чаты
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Андрей Ксюшкин</a></li>
                       <li><a class="dropdown-item" href="#">Саша Иванов</a></li>
                       <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
                       <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
                     </ul>
                   </li>
+                </div>
                   <!-- на потом -->
                   <li class="nav-item">
                     <a class="nav-link disabled"></a>
