--- a/index.html
+++ b/index.html
@@ -27,23 +27,20 @@
                     <a class="nav-link active" aria-current="page" href="#">Андрей Павлов</a>
                   </li>
                   <!-- телефон -->
-                  <div class="d-sm-none">
-                  <li class="nav-item">
+                  <li class="nav-item d-sm-none">
                     <a class="nav-link" href="#">Андрей Ксюшкин</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item d-sm-none">
                     <a class="nav-link" href="#">Саша Иванов</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item d-sm-none">
                     <a class="nav-link" href="#">Петя Гичкин</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item d-sm-none">
                     <a class="nav-link" href="#">Костя Никитин</a>
                   </li>
-                </div>
                   <!-- пк -->
-                  <div class="d-none d-md-block">
-                  <li class="nav-item dropdown">
+                  <li class="nav-item dropdown d-none d-md-block">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Чаты
                     </a>
@@ -54,7 +51,6 @@
                       <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
                     </ul>
                   </li>
-                </div>
                   <!-- на потом -->
                   <li class="nav-item">
                     <a class="nav-link disabled"></a>
