--- a/index.html
+++ b/index.html
@@ -23,28 +23,29 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Андрей Павлов</a>
-                  </li>
                   <!-- телефон -->
-                  <li class="nav-item d-sm-none">
-                    <a class="nav-link" href="#">Андрей Ксюшкин</a>
+                  <li class="nav-item d-md-none">
+                    <a class="nav-link" aria-current="page" href="#">Андрей Павлов</a>
                   </li>
-                  <li class="nav-item d-sm-none">
-                    <a class="nav-link" href="#">Саша Иванов</a>
+                  <li class="nav-item d-md-none">
+                    <a class="nav-link active" href="#">Андрей Ксюшкин</a>
                   </li>
-                  <li class="nav-item d-sm-none">
-                    <a class="nav-link" href="#">Петя Гичкин</a>
+                  <li class="nav-item d-md-none">
+                    <a class="nav-link active" href="#">Саша Иванов</a>
                   </li>
-                  <li class="nav-item d-sm-none">
-                    <a class="nav-link" href="#">Костя Никитин</a>
+                  <li class="nav-item d-md-none">
+                    <a class="nav-link active" href="#">Петя Гичкин</a>
+                  </li>
+                  <li class="nav-item d-md-none">
+                    <a class="nav-link active" href="#">Костя Никитин</a>
                   </li>
                   <!-- пк -->
                   <li class="nav-item dropdown d-none d-md-block">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Чаты
+                       Другие чаты
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item text-muted" href="#">Андрей Павлов</a></li>
                       <li><a class="dropdown-item" href="#">Андрей Ксюшкин</a></li>
                       <li><a class="dropdown-item" href="#">Саша Иванов</a></li>
                       <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
