--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="image/logo.PNG" alt="image/logo.PNG" width="30" height="30" class="d-inline-block align-text-top">
@@ -59,19 +59,27 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="ID пользователя" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Добавить</button>
+                  <button class="btn btn-outline-primary" type="submit">Добавить</button>
                 </form>
               </div>
             </div>
           </nav>
     </header>
 
-    <main>
-
-    </main>
-
-    <footer>
-
+    <footer class="fixed-bottom">
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="image\paperclip.svg" alt="image\paperclip.png" width="30" height="24">
+              </a>
+            <div class="container">
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+        </div>
+          </nav>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script> 
