--- a/index.html
+++ b/index.html
@@ -72,12 +72,10 @@
               <a class="navbar-brand" href="#">
                 <img src="image\paperclip.svg" alt="image\paperclip.png" width="30" height="24">
               </a>
-            <div class="container">
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+              <form class="d-flex margin-left">
+                <input class="form-control me-2" type="search" placeholder="Сообщение" aria-label="Search">
+                <button class="btn btn-info" type="submit">Отправить</button>
               </form>
-            </div>
         </div>
           </nav>
     </footer>
