--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item text-muted" href="#">Андрей Павлов</a></li>
                       <li><a class="dropdown-item" href="#">Андрей Ксюшкин</a></li>
-                      <li><a class="dropdown-item" href="#">Саша Иванов</a></li>
+                      <li><a class="dropdown-item" href="#">Саша Иванова</a></li>
                       <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
                       <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
                     </ul>
