--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,80 +9,102 @@
     <title>maxfromspace</title>
     <link rel="stylesheet" href="css/main.css">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="image/logo.PNG" alt="image/logo.PNG" width="30" height="30" class="d-inline-block align-text-top">
+                    <img src="image/logo.PNG" alt="image/logo.PNG" width="30" height="30"
+                        class="d-inline-block align-text-top">
                     MaxFromSpace
                 </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <!-- телефон -->
-                  <li class="nav-item d-md-none">
-                    <a class="nav-link" aria-current="page" href="#">Андрей Павлов</a>
-                  </li>
-                  <li class="nav-item d-md-none">
-                    <a class="nav-link active" href="#">Андрей Ксюшкин</a>
-                  </li>
-                  <li class="nav-item d-md-none">
-                    <a class="nav-link active" href="#">Саша Иванов</a>
-                  </li>
-                  <li class="nav-item d-md-none">
-                    <a class="nav-link active" href="#">Петя Гичкин</a>
-                  </li>
-                  <li class="nav-item d-md-none">
-                    <a class="nav-link active" href="#">Костя Никитин</a>
-                  </li>
-                  <!-- пк -->
-                  <li class="nav-item dropdown d-none d-md-block">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                       Другие чаты
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item text-muted" href="#">Андрей Павлов</a></li>
-                      <li><a class="dropdown-item" href="#">Андрей Ксюшкин</a></li>
-                      <li><a class="dropdown-item" href="#">Саша Иванова</a></li>
-                      <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
-                      <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- телефон -->
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link" aria-current="page" href="#">Андрей Павлов</a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link active" href="#">Андрей Ксюшкин</a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link active" href="#">Саша Иванов</a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link active" href="#">Петя Гичкин</a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <a class="nav-link active" href="#">Костя Никитин</a>
+                        </li>
+                        <!-- пк -->
+                        <li class="nav-item dropdown d-none d-md-block">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Другие чаты
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item text-muted" href="#">Андрей Павлов</a></li>
+                                <li><a class="dropdown-item" href="#">Андрей Ксюшкин</a></li>
+                                <li><a class="dropdown-item" href="#">Саша Иванов</a></li>
+                                <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
+                                <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
+                            </ul>
+                        </li>
+                        <!-- на потом -->
+                        <li class="nav-item">
+                            <a class="nav-link disabled"></a>
+                        </li>
                     </ul>
-                  </li>
-                  <!-- на потом -->
-                  <li class="nav-item">
-                    <a class="nav-link disabled"></a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="ID пользователя" aria-label="Search">
-                  <button class="btn btn-outline-primary" type="submit">Добавить</button>
-                </form>
-              </div>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="ID пользователя"
+                            aria-label="Search">
+                        <button class="btn btn-outline-primary" type="submit">Добавить</button>
+                    </form>
+                </div>
             </div>
-          </nav>
+        </nav>
     </header>
 
-    <footer class="fixed-bottom">
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
-                    <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
-                  </svg>
-              </a>
-              <form class="d-flex margin-left">
+    <footer class="container-fluid p-3">
+        <nav class="navbar navbar-light fixed-bottom bg-light justify-content-between">
+            <form class="d-flex justify-content-between" id="my_form">
+                <a class="btn btn-light navbar-brand" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" fill="currentColor"
+                        class="bi bi-paperclip" viewBox="0 0 16 16">
+                        <path
+                            d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z" />
+                    </svg>
+                </a>
                 <input class="form-control me-2" type="search" placeholder="Сообщение" aria-label="Search">
                 <button class="btn btn-info" type="submit">Отправить</button>
-              </form>
-        </div>
-          </nav>
+            </form>
+        </nav>
     </footer>
+
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+    
+    <script>
+        document.addEventListener('DOMContentLoaded', function(){
+            var availableScreenWidth = window.screen.availWidth;
+            if (availableScreenWidth < 500){
+                document.getElementById( 'my_form' ).style.width = String(availableScreenWidth) +  "px";
+            }else{
+                document.getElementById( 'my_form' ).style.width = String(availableScreenWidth/2) +  "px";
+            }
+        });
+    </script>
 </body>
+
 </html>
