--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <a class="nav-link active" href="#">Петя Гичкин</a>
                         </li>
                         <li class="nav-item d-md-none bugaga">
-                            <a class="nav-link active" href="#">Костя Никитин</a>
+                            <a class="nav-link active" href="/calculator.html">Костя Никитин</a>
                         </li>
                         <!-- пк -->
                         <li class="nav-item dropdown d-none d-md-block">
