--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <li><a class="dropdown-item" href="#">Андрей Ксюшкин</a></li>
                                 <li><a class="dropdown-item" href="#">Саша Иванов</a></li>
                                 <li><a class="dropdown-item" href="#">Петя Гичкин</a></li>
-                                <li><a class="dropdown-item" href="#">Костя Никитин</a></li>
+                                <li><a class="dropdown-item" href="/calculator.html">Костя Никитин</a></li>
                             </ul>
                         </li>
                         <!-- на потом -->
