--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <a class="navbar-brand text-dark" href="#">
+                    <a class="navbar-brand text-dark bugag" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-sliders" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3h9.05zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8h2.05zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1h9.05z"/>
                           </svg>
@@ -101,16 +101,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     
-        <script>
-            document.addEventListener('DOMContentLoaded', function(){
-                var availableScreenWidth = window.screen.availWidth;
-                if (availableScreenWidth < 500){
-                    document.getElementById( 'my_form' ).style.width = String(availableScreenWidth) +  "px";
-                }else{
-                    document.getElementById( 'my_form' ).style.width = String(availableScreenWidth/2) +  "px";
-                }
-            });
-        </script>
+        <script src="\JavaScript\main.js"></script>
 </body>
 
 </html>
